updated chatbot image

--- a/templates/index.html
+++ b/templates/index.html
@@ -155,7 +155,7 @@
     <!-- Add your existing website content here -->
 
     <button id="chat-button" aria-label="Chat with DoJ Bot">
-        <img src="C:\Users\rites\Desktop\Smart India Hackathon\New folder\SIH-chatbotDoJ\templates\bot-icon.png" alt="Bot Icon">
+        <img src="https://cdn-icons-png.flaticon.com/512/4712/4712109.png" alt="Bot Icon">
     </button>
 
     <div id="chat-container">
