back button updated

--- a/templates/index.html
+++ b/templates/index.html
@@ -222,7 +222,7 @@
     </style>
 </head>
 <body>
-    <h1>Your Website Content</h1>
+    
     <!-- Add your existing website content here -->
     <div id="header">
         Department of Justice, India
@@ -274,7 +274,7 @@
     <div id="chat-container">
         <div id="chat-header">
             <button id="back-button" onclick="toggleChat()" aria-label="Back">
-                <!-- Back Button SVG Icon -->
+                <img src = "https://www.pngmart.com/files/22/Back-Button-PNG-Photo.png"height= "30px"  alt="back">
             </button>
             DoJ Chatbot
         </div>
