--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
     </select>
     
     <button id="chat-button" aria-label="Chat with DoJ Bot">
-        <img src="https://cdn-icons-png.flaticon.com/512/4712/4712109.png" alt="Bot Icon">
+        <img src="https://static.vecteezy.com/system/resources/previews/026/960/350/non_2x/male-cute-lawyer-character-in-court-free-png.png" alt="Bot Icon">
     </button>
 
     <div id="chat-container">
@@ -68,7 +68,7 @@
             <button id="back-button" onclick="toggleChat()" aria-label="Back">
                 <img src="https://www.pngmart.com/files/22/Back-Button-PNG-Photo.png" height="30px" alt="back">
             </button>
-            VAANI
+            SATTHI
         </div>
         <div id="chatbox"></div>
         <div id="user-input">
