--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -278,8 +278,7 @@ ul li a:hover {
     margin-top: 10px;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    background-color: #e6e6e6;
+    background-color: #f0f0f0;
     border-radius: 5px;
     padding: 5px;
     align-self: flex-start;
@@ -359,7 +358,7 @@ ul li a:hover {
     margin-bottom: 5px;
     padding: 8px 10px;
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 30px;
     font-size: 0.9em;
     white-space: nowrap;
     overflow: hidden;
@@ -385,7 +384,7 @@ ul li a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 30px;
     font-size: 0.8em;
 }
 
@@ -394,7 +393,7 @@ ul li a:hover {
     border: none;
     padding: 3px 10px;
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 30px;
 }
 
 .suggestion-navigation button:disabled {
