--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
             <button id="back-button" onclick="toggleChat()" aria-label="Back">
                 <img src="https://www.pngmart.com/files/22/Back-Button-PNG-Photo.png" height="30px" alt="back">
             </button>
-            SATTHI
+            SAATHI
         </div>
         <div id="chatbox"></div>
         <div id="user-input">
